--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
   "functions": {
-    "api/*.py": {
+    "api/**/*.py": {
       "runtime": "python3.9"
     }
-  }
+  },
+  "builds": [
+    { "src": "api/**/*.py", "use": "@vercel/python" },
+    { "src": "index.html", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+  ]
 }
